# samdul16food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html  test.html
public/assets/css/: main.css
src/samdul16food/: main.py
