[project]
name = "samdul16food"
version = "0.4.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "pymysql>=1.1.1",
    "pytz>=2024.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
